--- a/my_web/templates/my_web/auth/login.html
+++ b/my_web/templates/my_web/auth/login.html
@@ -108,9 +108,9 @@
                                 <form method="post">
                                     {% csrf_token %}
                                     <div class="mb-3">
-                                        <label class="form-label" for="split-login-email">Username</label>
-                                        <input class="form-control" id="split-login-email" type="text"
-                                               name="username" required/>
+                                        <label class="form-label" for="split-login-email">Email</label>
+                                        <input class="form-control" id="split-login-email" type="email"
+                                               name="email" required/>
                                     </div>
                                     <div class="mb-3">
                                         <div class="d-flex justify-content-between">
