--- a/product/templates/product/product-list.html
+++ b/product/templates/product/product-list.html
@@ -464,21 +464,11 @@
                                                                                  href="#!">{{ product.category }}</a>
                                                 </p>
                                                 <ul class="list-unstyled d-none d-lg-block">
-                                                    <li><span class="fas fa-circle"
-                                                              data-fa-transform="shrink-12"></span><span>16GB RAM</span>
-                                                    </li>
-                                                    <li><span class="fas fa-circle"
-                                                              data-fa-transform="shrink-12"></span><span>1TB SSD Hard Drive</span>
-                                                    </li>
-                                                    <li><span class="fas fa-circle"
-                                                              data-fa-transform="shrink-12"></span><span>10-core Intel Xeon</span>
-                                                    </li>
-                                                    <li><span class="fas fa-circle"
-                                                              data-fa-transform="shrink-12"></span><span>Mac OS</span>
-                                                    </li>
-                                                    <li><span class="fas fa-circle"
-                                                              data-fa-transform="shrink-12"></span><span>Secured</span>
-                                                    </li>
+{#                                                    {% for productattribute in product.productattribute_set.value.value %}#}
+{#                                                        <li><span class="fas fa-circle"#}
+{#                                                                  data-fa-transform="shrink-12"></span>hello  world<span></span>#}
+{#                                                        </li>#}
+{#                                                    {% endfor %}#}
                                                 </ul>
                                             </div>
                                             <div class="col-lg-4 d-flex justify-content-between flex-column">
@@ -558,14 +548,14 @@
                         <a class="btn btn-sm btn-falcon-default me-2"
                            href="?page={{ products.next_page_number }}">{{ products.next_page_number }}</a>
                     {% endif %}
-{#                    {% if products.paginator.num_pages > 10 %}#}
-{#                        {% if products.paginator.num_pages != products.next_page_number %}#}
-{#                            <a class="btn btn-sm btn-falcon-default me-2" href="#!"><span#}
-{#                                    class="fas fa-ellipsis-h"></span></a>#}
-{#                        {% endif %}#}
-{#                        <a class="btn btn-sm btn-falcon-default me-2"#}
-{#                           href="?page={{ products.paginator.num_pages }}">{{ products.paginator.num_pages }}</a>#}
-{#                    {% endif %}#}
+                    {#                    {% if products.paginator.num_pages > 10 %}#}
+                    {#                        {% if products.paginator.num_pages != products.next_page_number %}#}
+                    {#                            <a class="btn btn-sm btn-falcon-default me-2" href="#!"><span#}
+                    {#                                    class="fas fa-ellipsis-h"></span></a>#}
+                    {#                        {% endif %}#}
+                    {#                        <a class="btn btn-sm btn-falcon-default me-2"#}
+                    {#                           href="?page={{ products.paginator.num_pages }}">{{ products.paginator.num_pages }}</a>#}
+                    {#                    {% endif %}#}
 
 
                     {% if products.has_next %}
