--- a/product/templates/product/product-details.html
+++ b/product/templates/product/product-details.html
@@ -6,8 +6,28 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <div class="swiper-slide h-100"><img class="rounded-1 fit-cover h-100 w-100"
-                                                         src="{{ product.image.url }}" alt=""/>
+                    <div class="product-slider" id="galleryTop">
+                        <div class="swiper-container theme-slider position-lg-absolute all-0"
+                             data-swiper='{"autoHeight":true,"spaceBetween":{{ product.images.count }},"loop":true,"loopedSlides":{{ product.images.count }},"thumb":{"spaceBetween":{{ product.images.count }},"slidesPerView":{{ product.images.count }},"loop":true,"freeMode":true,"grabCursor":true,"loopedSlides":{{ product.images.count }},"centeredSlides":true,"slideToClickedSlide":true,"watchSlidesVisibility":true,"watchSlidesProgress":true,"parent":"#galleryTop"},"slideToClickedSlide":true}'>
+                            {% for image in product.images.all %}
+                                <div class="swiper-wrapper h-100">
+                                    {% if image.is_primary %}
+                                        <div class="swiper-slide h-100"><img class="rounded-1 fit-cover h-100 w-100"
+                                                                             src="{{ image.image.url }}"
+                                                                             alt=""/>
+                                        </div>
+                                    {% endif %}
+                                    <div class="swiper-slide h-100"><img class="rounded-1 fit-cover h-100 w-100"
+                                                                         src="{{ image.image.url }}"
+                                                                         alt=""/>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                            <div class="swiper-nav">
+                                <div class="swiper-button-next swiper-button-white"></div>
+                                <div class="swiper-button-prev swiper-button-white"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
