--- a/users/templates/users/sending_mail.html
+++ b/users/templates/users/sending_mail.html
@@ -80,7 +80,7 @@
         <textarea id="email-body" name="message" rows="10" required></textarea>
 
         <label for="email-recipient">Enter the email you want to send:</label>
-        <input type="email" id="email-recipient" name="email" required>
+        <input type="text" id="email-recipient" name="email" required>
 
         <button type="submit">Send</button>
 
